--- a/template/newhtml.html
+++ b/template/newhtml.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title Updated</title>
 </head>
 <body>
-
+<p> hello the file is updated</p>
 </body>
 </html>
